--- a/index.css
+++ b/index.css
@@ -1,31 +1,72 @@
 .body {
   width: 100%;
+  margin: 0;
 }
 
-.container h1 {
-  text-align: center;
-  background-color: grey;
-  margin-bottom: 0;
+.container {
+  /*Varför är det en vit ram runt vissa delar men inte alla? Vad är skillnaden mot vad jag gjort innan? width: 100% funkar inte*/
+  background-color: #01161e;
+  font-family: sans-serif;
+  padding: 0;
 }
 
 .topnav {
   text-align: center;
-  background-color: #d3b88c;
+  background-color: #cbe4d9;
+  height: 2em;
+  padding-top: 1em;
 }
 .topnav a {
   font-size: 1em;
-  padding: 10%;
+  font-weight: bold;
+  margin: 10%; /*Har du paddingen här så blir hela länken jättestor*/
   color: black;
+  text-decoration-line: none;
+  border-radius: 10%;
+  padding: 1em;
 }
 
-.container img {
-  height: 500px;
+.topnav a:hover {
+  background-color: #8ad4d4;
+}
+
+.video {
+  width: 100%;
+  height: 35em;
   margin-left: auto;
-  margin-right: auto;
-  display: flex;
+  margin-right: auto; /* Detta ska väl centrera en bild?*/
+  display: block;
 }
 
 .infoText {
   padding: 20px;
   font-size: 1em;
+  width: 50%;
+  margin-left: 25%;
+  background-color: white;
+}
+
+#computer {
+  padding: 2em;
+  width: 50%;
+  height: 50%; 
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  border-radius: 50%;
+}
+#cabin {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+}
+
+.footer {
+  width: 100%;
+  background-color: #467579;
+  height: 2em;
+  text-align: center;
+  position: absolute;
+  padding-top: 15px;
 }
