--- a/kurser.css
+++ b/kurser.css
@@ -10,12 +10,10 @@ body {
   padding: 0;
 }
 
-.container h1 {
-  color: white;
-  text-align: center;
-  left: 40%;
-  margin-top: 0;
-  transform: translateY(40%);
+.flex-nav {
+  display: flexbox;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .topnav {
@@ -27,7 +25,6 @@ body {
 .topnav a {
   font-size: 1em;
   font-weight: bold;
-  margin: 10%; /*Har du paddingen här så blir hela länken jättestor*/
   color: black;
   text-decoration-line: none;
   border-radius: 10%;
@@ -39,6 +36,11 @@ body {
   cursor: pointer;
 }
 
+.topnav a:active {
+  /*Få fliken att byta bakgrundsfärg när vi går in i den */
+  background-color: navajowhite;
+}
+
 #cabin {
   width: 50%;
   margin-left: auto;
@@ -46,8 +48,110 @@ body {
   display: flex;
 }
 
+.rubrik {
+  background: white;
+  width: 50%;
+  margin-left: 25%;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 .courses {
+  display: grid;
+  font-size: 1em;
+  height: 50vh;
+  width: 50%;
+  margin-left: 25%;
+  grid-template-columns: 25% 25% 25% 25%;
   background-color: white;
+}
+
+.grid-item {
+  margin: 0.5em;
+  padding: 1em;
+  text-align: center;
+  width: auto;
+  border-radius: 5px;
+}
+
+#Internetkunskap {
+  background-color: #dce1de;
+  font-weight: bold;
+  margin: 2%;
+}
+
+#Internetkunskap img {
+  width: 100%;
+  margin: 2%;
+  border-radius: 5px;
+}
+
+#ProgSpråk {
+  background-color: #dce1de;
+  font-weight: bold;
+  margin: 2%;
+}
+
+#ProgSpråk img {
+  width: 100%;
+  margin: 2%;
+  border-radius: 5px;
+}
+
+#AI {
+  background-color: #dce1de;
+  font-weight: bold;
+  margin: 2%;
+}
+
+#AI img {
+  width: 100%;
+  margin: 2%;
+  border-radius: 5px;
+}
+
+#Cloud {
+  background-color: #dce1de;
+  font-weight: bold;
+  margin: 2%;
+}
+
+#Cloud img {
+  width: 100%;
+  margin: 2%;
+  border-radius: 5px;
+}
+
+#OfficePaketet {
+  background-color: #dce1de;
+  font-weight: bold;
+  margin: 2%;
+}
+
+#OfficePaketet img {
+  width: 100%;
+  margin: 2%;
+  border-radius: 5px;
+}
+
+#Paint {
+  background-color: #dce1de;
+  font-weight: bold;
+  margin: 2%;
+}
+
+#Paint img {
+  width: 100%;
+  margin: 2%;
+  border-radius: 5px;
+}
+
+/* .courses {
+  /*position: absolute;*/
+/*transform: translate(-50%, -50%);*/
+/* background-color: white;
   width: 50%;
   margin-left: auto;
   margin-right: auto;
@@ -57,6 +161,11 @@ body {
 .courses button {
   margin-left: 20%;
   border-radius: 10px;
+  display: block;
+}
+
+.courses button:hover {
+  cursor: pointer;
 }
 
 .courses ul ul {
@@ -73,12 +182,14 @@ body {
   width: 50%;
   border-radius: 12px;
   list-style: none;
+  display: none;
 }
 
 .courses button:focus + ul ul {
   opacity: 1;
   transform: translateY(0px);
-}
+  display:inline-block; 
+} */
 
 .footer {
   width: 100%;
