--- a/kurser.css
+++ b/kurser.css
@@ -19,6 +19,7 @@ body {
 .topnav {
   text-align: center;
   background-color: #cbe4d9;
+  font-size: 1em;
   height: 2em;
   padding-top: 1em;
 }
@@ -61,7 +62,6 @@ body {
 .courses {
   display: grid;
   font-size: 1em;
-  height: 50vh;
   width: 50%;
   margin-left: 25%;
   grid-template-columns: 25% 25% 25% 25%;
