--- a/index.css
+++ b/index.css
@@ -10,25 +10,28 @@ body {
   padding: 0;
 }
 
-.flex-nav {
-  display: flexbox;
-  width: 100%;
-  justify-content: space-between;
-}
-
 .topnav {
   text-align: center;
   background-color: #cbe4d9;
-  height: 2em;
+  height: 50px;
   padding-top: 1em;
 }
-.topnav a {
-  font-size: 1em;
+
+.topnav ul {
+  text-decoration: none;
+  list-style: none;
+}
+
+.topnav ul li {
+  display: inline-block;
+}
+
+.topnav ul li a {
   font-weight: bold;
   color: black;
   text-decoration-line: none;
   border-radius: 10%;
-  padding: 1em;
+  padding: 1rem;
 }
 
 .topnav a:hover {
@@ -73,4 +76,16 @@ body {
   text-align: center;
   position: absolute;
   padding-top: 15px;
+}
+
+@media (min-width: 375px) and (max-width: 562px) {
+}
+
+@media (max-width: 768px) {
+}
+
+@media (min-width: 769px) and (max-width: 998) {
+}
+
+@media (min-width: 999) {
 }
