--- a/kurser.css
+++ b/kurser.css
@@ -10,36 +10,31 @@ body {
   padding: 0;
 }
 
-.flex-nav {
-  display: flexbox;
-  width: 100%;
-  justify-content: space-between;
-}
-
 .topnav {
-  text-align: center;
+  width: 100%;
   background-color: #cbe4d9;
   font-size: 1em;
-  height: 2em;
-  padding-top: 1em;
+  padding: 1em;
+  text-align: center;
 }
-.topnav a {
+
+.topnav ul li {
+  display: inline-block;
+}
+
+.topnav ul li a {
   font-size: 1em;
   font-weight: bold;
   color: black;
   text-decoration-line: none;
-  border-radius: 10%;
-  padding: 1em;
+  border-radius: 3%;
+  padding: 1rem;
+  margin-right: 1rem;
 }
 
-.topnav a:hover {
+.topnav ul li a:hover {
   background-color: #8ad4d4;
   cursor: pointer;
-}
-
-.topnav a:active {
-  /*Få fliken att byta bakgrundsfärg när vi går in i den */
-  background-color: navajowhite;
 }
 
 #cabin {
@@ -50,7 +45,7 @@ body {
 }
 
 .rubrik {
-  background: white;
+  background: #477a79;
   width: 50%;
   margin-left: 25%;
   font-weight: bold;
@@ -65,7 +60,7 @@ body {
   width: 50%;
   margin-left: 25%;
   grid-template-columns: 25% 25% 25% 25%;
-  background-color: white;
+  background-color: #477a79;
 }
 
 .grid-item {
@@ -77,7 +72,7 @@ body {
 }
 
 #Internetkunskap {
-  background-color: #dce1de;
+  background-color: #dce1de58;
   font-weight: bold;
   margin: 2%;
 }
@@ -89,7 +84,7 @@ body {
 }
 
 #ProgSpråk {
-  background-color: #dce1de;
+  background-color: #dce1de58;
   font-weight: bold;
   margin: 2%;
 }
@@ -101,7 +96,7 @@ body {
 }
 
 #AI {
-  background-color: #dce1de;
+  background-color: #dce1de58;
   font-weight: bold;
   margin: 2%;
 }
@@ -113,7 +108,7 @@ body {
 }
 
 #Cloud {
-  background-color: #dce1de;
+  background-color: #dce1de58;
   font-weight: bold;
   margin: 2%;
 }
@@ -125,7 +120,7 @@ body {
 }
 
 #OfficePaketet {
-  background-color: #dce1de;
+  background-color: #dce1de58;
   font-weight: bold;
   margin: 2%;
 }
@@ -137,7 +132,7 @@ body {
 }
 
 #Paint {
-  background-color: #dce1de;
+  background-color: #dce1de58;
   font-weight: bold;
   margin: 2%;
 }
@@ -148,49 +143,6 @@ body {
   border-radius: 5px;
 }
 
-/* .courses {
-  /*position: absolute;*/
-/*transform: translate(-50%, -50%);*/
-/* background-color: white;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 3%;
-}
-
-.courses button {
-  margin-left: 20%;
-  border-radius: 10px;
-  display: block;
-}
-
-.courses button:hover {
-  cursor: pointer;
-}
-
-.courses ul ul {
-  opacity: 0;
-  transform: translateY(-10px);
-  transition: all 0.4s ease;
-  position: static;
-}
-
-.courses ul ul li {
-  margin-left: 20%;
-  padding: 1em;
-  background: lightgrey;
-  width: 50%;
-  border-radius: 12px;
-  list-style: none;
-  display: none;
-}
-
-.courses button:focus + ul ul {
-  opacity: 1;
-  transform: translateY(0px);
-  display:inline-block; 
-} */
-
 .footer {
   width: 100%;
   background-color: #467579;
@@ -198,4 +150,129 @@ body {
   text-align: center;
   position: absolute;
   padding-top: 15px;
+}
+
+@media (min-width: 375px) and (max-width: 562px) {
+  .container {
+    width: 100%;
+  }
+
+  .topnav {
+    width: 100%;
+    height: 0;
+    font-weight: bold;
+  }
+
+  .active {
+    text-transform: uppercase;
+    text-decoration: none;
+    float: left;
+    color: black;
+  }
+
+  .topnav #myLinks {
+    display: none;
+    text-decoration: none;
+    color: black;
+  }
+
+  .topnav a {
+    color: red;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav a:hover {
+    transition: 0.5s;
+  }
+
+  .topnav a:active {
+    background-color: #01161e;
+    color: white;
+  }
+
+  /* .menu-burger {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+    border: 3px solid #fff;
+  }
+
+  .menu-burger-btn {
+    width: 50px;
+    height: 6px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
+    transition: all 0.5s ease-in-out;
+  }
+
+  .menu-burger-btn::before,
+  .menu-burger-btn::after {
+    content: " ";
+    position: absolute;
+    width: 50px;
+    height: 6px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
+    transition: all 0.5s ease-in-out;
+  }
+
+  .menu-burger-btn::before {
+    transform: translateY(-16px);
+  }
+
+  .menu-burger-btn::after {
+    transform: translateY(16px);
+  }
+
+  .menu-burger.open .menu-burger-btn {
+    transform: translateX(-50px);
+    background-color: transparent;
+    box-shadow: none;
+  } */
+
+  .rubrik {
+    width: 100%;
+    margin: 0;
+    padding: 1rem;
+  }
+
+  #cabin {
+    display: none;
+  }
+
+  .courses {
+    width: 100%;
+    margin: 0;
+    display: grid;
+    font-size: 1em;
+    grid-template-columns: 50% 50%;
+    background-color: #477a79;
+  }
+}
+
+@media (max-width: 768px) {
+}
+
+@media (min-width: 769px) and (max-width: 998) {
+}
+
+@media (min-width: 999) {
 }
