--- a/admin.css
+++ b/admin.css
@@ -33,14 +33,6 @@ body {
   cursor: pointer;
 }
 
-.video {
-  width: 100%;
-  height: 35em;
-  margin-left: auto;
-  margin-right: auto; /* Detta ska väl centrera en bild?*/
-  display: block;
-}
-
 .infoText {
   padding: 20px;
   font-size: 1em;
@@ -49,18 +41,12 @@ body {
   background-color: white;
 }
 
-.infoText h1 {
-  text-align: center;
+.adminModal {
+  background-color: #cbe4d9;
 }
 
-#computer {
-  padding: 2em;
-  width: 50%;
-  height: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  border-radius: 50%;
+.existingCourses ul {
+  line-height: 1.5rem;
 }
 
 .footer {
@@ -123,15 +109,6 @@ body {
   .topnav a:active {
     background-color: #01161e;
     color: white;
-  }
-  .infoText {
-    width: 70%;
-    margin-left: 10%;
-  }
-
-  #computer {
-    width: 80%;
-    height: 80%;
   }
 }
 
