--- a/kundvagn.css
+++ b/kundvagn.css
@@ -33,34 +33,16 @@ body {
   cursor: pointer;
 }
 
-.video {
-  width: 100%;
-  height: 35em;
-  margin-left: auto;
-  margin-right: auto; /* Detta ska väl centrera en bild?*/
-  display: block;
-}
-
-.infoText {
-  padding: 20px;
-  font-size: 1em;
-  width: 50%;
-  margin-left: 25%;
+.cart {
   background-color: white;
-}
-
-.infoText h1 {
-  text-align: center;
-}
-
-#computer {
-  padding: 2em;
   width: 50%;
-  height: 50%;
   margin-left: auto;
   margin-right: auto;
-  display: flex;
-  border-radius: 50%;
+  padding: 1rem;
+}
+
+.cart p {
+  border: solid black 1px;
 }
 
 .footer {
