--- a/admin.css
+++ b/admin.css
@@ -11,7 +11,7 @@ body {
 }
 
 .topnav {
-  width: 100%;
+  width: auto;
   background-color: #cbe4d9;
   font-size: 1em;
   padding: 1em;
@@ -49,6 +49,9 @@ body {
   line-height: 1.5rem;
 }
 
+#saveBtn {
+  margin-top: 2rem;
+}
 .footer {
   width: 100%;
   background-color: #467579;
