--- a/admin.css
+++ b/admin.css
@@ -41,8 +41,31 @@ body {
   background-color: white;
 }
 
-.adminModal {
-  background-color: #cbe4d9;
+.admin_Modal_Container {
+  background-color: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+}
+
+.admin_Modal_Container.show {
+  pointer-events: auto;
+  opacity: 1;
+}
+
+.modal {
+  background-color: #fff;
+  width: 30%;
+  border-radius: 3%;
+  padding: 1.5rem;
 }
 
 .existingCourses ul {
@@ -57,7 +80,6 @@ body {
   background-color: #467579;
   height: 2em;
   text-align: center;
-  position: absolute;
   padding-top: 15px;
 }
 
