försöker lista ut spara-knappen

--- a/kurssida.css
+++ b/kurssida.css
@@ -366,7 +366,7 @@ body {
   background-color: white;
 }
 
-.modal {
+.adminCourseModal {
   background-color: #fff;
   width: 30%;
   border-radius: 3%;
