--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
 }
 
 .topnav {
-  width: auto;
+  width: 100%;
   background-color: #cbe4d9;
   font-size: 1em;
   padding: 1em;
@@ -62,7 +62,6 @@ body {
   border-radius: 50%;
 }
 
-/*Slut på Kundvagnssida*/
 .footer {
   width: 100%;
   background-color: #467579;
@@ -81,7 +80,7 @@ body {
     display: none;
   }
   .topnav {
-    width: auto;
+    width: 100%;
     height: 0;
     font-weight: bold;
     padding: 2rem;
