--- a/index.css
+++ b/index.css
@@ -13,18 +13,22 @@ body {
   width: 100%;
   background-color: #cbe4d9;
   font-size: 1em;
-  padding: 1em;
-  text-decoration: none;
+  display: inline-flex;
 }
 
 .topnav a {
-  font-size: 1em;
-  font-weight: bold;
-  color: black;
-  border-radius: 3%;
-  padding: 1rem;
-  margin-right: 1rem;
+  padding: 0.7rem;
   text-decoration: none;
+  color: black;
+  font-size: 1.5rem;
+}
+
+#myLinks {
+  padding: 0.7rem;
+  margin-left: 27%;
+}
+#myLinks a {
+  align-items: center;
 }
 
 .topnav a:hover {
@@ -36,7 +40,7 @@ body {
   width: 100%;
   height: 35em;
   margin-left: auto;
-  margin-right: auto; /* Detta ska väl centrera en bild?*/
+  margin-right: auto;
   display: block;
 }
 
