--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@ body {
   }
 
   .topnav {
-    width: 100%;
+    width: auto;
     height: 0;
     font-weight: bold;
     padding: 2rem;
@@ -128,6 +128,7 @@ body {
     background-color: #01161e;
     color: white;
   }
+
   .infoText {
     width: 70%;
     margin-left: 10%;
